--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,18 @@
-name: Deploy-azure acr
+name: Audit
+
 on:
   push:
-    branches: [main]    
+    branches: [main]
+  pull_request:
+    branches: [main]
+
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    
+
+  audit:
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
- 
+
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
@@ -34,36 +38,7 @@ jobs:
 
     - name: Run golint
       run: golint ./...
-      
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - uses: actions/ckeckout@v3
-    - name: azure login
-      run: |
-          az login --service-principal -u $AZURE_CLIENT_ID -p $AZURE_CLIENT_SECRET --tenant $AZURE_TENANT_ID
-          az account list
-    - name: 'Build and push image'
-      uses: azure/docker-login@v1
-      with:
-           login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-           username: ${{ secrets.REGISTRY_USERNAME }}
-           password: ${{ secrets.REGISTRY_PASSWORD }}
-    - name: image build
-    - run: |
-           docker build . /myapp/Dockerfile ${{ secrets.REGISTRY_LOGIN_SERVER }}/myimage:${{ github.sha }} .
-           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/myimage:${{ github.sha }}
 
-    - name: 'Deploy to Azure Container Instances'
-      uses: 'azure/aci-deploy@v1'
-      with:
-           resource-group: ${{ secrets.RESOURCE_GROUP }}
-           dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
-           image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/myimage:${{ github.sha }}
-           registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-           registry-username: ${{ secrets.REGISTRY_USERNAME }}
-           registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-           name: aci-myimage
-           location: 'east us'
+    - name: Run tests
+      run: go test -race -vet=off ./...
         
