--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -34,12 +34,12 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_CONTAINER_REGISTRY: "abinaya"
-  CONTAINER_NAME: "abinaya"
-  RESOURCE_GROUP: "AKS_RG"
-  CLUSTER_NAME: "AKS_KUBE_CLUSTER"
-  IMAGE_PULL_SECRET_NAME: "AcrPull"
-  DEPLOYMENT_MANIFEST_PATH: 'your-deployment-manifest-path'
+  AZURE_CONTAINER_REGISTRY: abinaya
+  CONTAINER_NAME: abinaya
+  RESOURCE_GROUP: AKS_RG
+  CLUSTER_NAME: AKS_KUBE_CLUSTER
+  IMAGE_PULL_SECRET_NAME: AcrPull
+  DEPLOYMENT_MANIFEST_PATH: main
 
 jobs:
   buildImage:
