--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -37,7 +37,7 @@ env:
   AZURE_CONTAINER_REGISTRY: abinaya
   CONTAINER_NAME: abinaya
   RESOURCE_GROUP: AKS_RG
-  CLUSTER_NAME: AKS_KUBE_CLUSTER
+  CLUSTER_NAME: MY_KUBE_CLUSTER
   IMAGE_PULL_SECRET_NAME: AcrPull
   DEPLOYMENT_MANIFEST_PATH: main
 
