--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -55,9 +55,9 @@ jobs:
     - name: Azure login
       uses: azure/login@v1.4.3
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        client-id: bf3c2786-f8d6-476e-be8b-3da3217ea1ec
+        tenant-id: 1a11d0e6-5eca-40e5-be75-c6e47e61a910
+        subscription-id: ca2f159a-a58d-4bdb-8672-7c9297788dc5
     - name: azure cli
       run: az login
       
