--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -52,8 +52,12 @@ jobs:
     - uses: actions/checkout@v3
     
     # Logs in with your Azure credentials
+    -name: install az-cli
+     run: |
+        sudo apt-get update
+        sudo apt-get install azure-cli=2.39.0-1~bullseye
     - name: Azure login
-      uses: azure/login@v2.39.0
+      uses: azure/login@v1.4.3
       with:
         client-id: bf3c2786-f8d6-476e-be8b-3da3217ea1ec
         tenant-id: 1a11d0e6-5eca-40e5-be75-c6e47e61a910
