--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -57,9 +57,10 @@ jobs:
         sudo apt-get update
         sudo apt-get install azure-cli
     - name: Azure login
-      uses: Azure/actions/login@V1.4.3
+      uses: azure/login@V1.4.3
       with:
         client-id: bf3c2786-f8d6-476e-be8b-3da3217ea1ec
+        client-secret: Ump8Q~EE3539eWPYRPZLz3hgIwktaqVixRaFjbEM
         tenant-id: 1a11d0e6-5eca-40e5-be75-c6e47e61a910
         subscription-id: ca2f159a-a58d-4bdb-8672-7c9297788dc5
       
