--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -21,7 +21,7 @@ jobs:
             username: ${{ secrets.REGISTRY_USERNAME }}
             password: ${{ secrets.REGISTRY_PASSWORD }}
         - run: |
-            docker build -file Dockerfile -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/sampleapp:latest .
+            docker build --file ./Dockerfile -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/sampleapp:latest .
             docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/sampleapp:latest
 
         - name: 'Deploy to Azure Container Instances'
