--- a/aks/service.yaml
+++ b/aks/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sampleapp-service
+  name: sampleapp
 spec:
   selector:
     app: sampleapp-image
