--- a/aks/service.yaml
+++ b/aks/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sampleapp
+  name: sampleapp-image-service
 spec:
   selector:
-    app: sampleapp
+    app: sampleapp-image
   ports:
     - protocol: TCP
       port: 80
